--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rikku",
   "version": "1.0.0",
-  "description": "To transform string like \"\\\\xE5\\\\x8F\\\\xAF\\\\xE3\\\\x80\\\\x82\" into normal ones.",
+  "description": "To transform string like \"\\xE5\\x8F\\xAF\\xE3\\x80\\x82\" into normal ones.",
   "main": "index.js",
   "directories": {
     "test": "test"
