--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node test/test.js"
+    "test": "./node_modules/.bin/mocha ./test/"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/XadillaX/rikku/issues"
   },
-  "homepage": "https://github.com/XadillaX/rikku"
+  "homepage": "https://github.com/XadillaX/rikku",
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "should": "^6.0.3"
+  }
 }
